# modular-diffusion-planner

./: .gitignore  CITATION.bib  NOTICE  README.md  RELEASE_CHECKLIST.md  index.html
benchmarks/: analyze_steps.py  gen_figures.py  latency_benchmark.py  offline_solver_benchmark.py  requirements.txt
benchmarks/data/: latency_results.npz  solver_benchmark_results.npz
docs/garage_corl_2026_05/: README.md  garage_brainstorm.md  garage_corl_experiments.md
experiments/corl_2026_05_24/: Makefile  README.md  SESSION_SUMMARY.md
experiments/corl_2026_05_24/outputs/: 4model_cc_violation_rates.json  4model_full_cc_scoring.json  4model_per_model_stats.json  5_01_R1_real_vehicle_cc_summary.json  final_eval_6model.json  final_eval_7model.json  latent_bank_kashiwa.npz  mock_perturbation_sweep_demo.json  ood_perturbation_alphas.json  ood_scaler_calib.json  per_layer_lora_ablation.json  perturbation_real_3model.json  perturbation_sweep_3model_mock.json  phase2_29configs_summary.json  phase4_n500_v3.json  preference_pair_demo.json  realbag_v3_eval.json  sanity_v3_cc_scoring.json  surgical_lora_demo.json  v2_rescore_8models.json  v3_rescore_topK.json
experiments/corl_2026_05_24/outputs/greedy_soup_v3_comfort/: soup_summary.json
experiments/corl_2026_05_24/paper_drafts/: FINAL_RESULTS.md  PHASE4_RESULTS.md  abstract_and_contributions.md  results_summary.md  section6_failure_modes.md  section6_v3.md  section7_method.md  section7_v3.md
experiments/corl_2026_05_24/scripts/: analyze_4model_parquet.py  build_latent_bank.py  cc_proxy_v3.py  cc_violation_score.py  cc_violation_score_v2.py  chain_2a_2b_2c.sh  chain_2a_then_2b.sh  eval_model_cc.py  extract_real_ego_trajectories.py  final_n500_eval.py  final_results_figures.py  generate_large_pref_pairs.py  greedy_soup_dpo.py  greedy_soup_v3_comfort.py  ood_aware_lora_scaling.py  per_layer_lora_ablation.py  perturbation_sweep_runner.py  phase3_sam_multiseed.sh  phase4_n500.py  plot_sweep.py  real_dpo_lora.py  real_model_perturbation_sweep.py  realbag_v3_eval.py  run_all_phases.sh  run_dpo_sweep.sh  run_dpo_sweep_2b_ad.sh  run_dpo_sweep_2c_lora.sh  run_dpo_sweep_v2.sh  run_dpo_sweep_v2b.sh  score_5_21_full.py  sensor_perturbation.py  split_pairs.py  surgical_lora_demo.py  train_real_dpo_l2_hybrid.py  train_real_dpo_lora.py  train_with_sample_eval.py  v3_rescore_topK.py
patches/: modular_planner_vs_upstream.patch
planner/autoware_diffusion_planner_onnx_split_cpp/: CMakeLists.txt  package.xml
planner/autoware_diffusion_planner_onnx_split_cpp/config/: diffusion_planner.param.yaml  diffusion_planner.param.yaml.bak
planner/autoware_diffusion_planner_onnx_split_cpp/include/autoware/diffusion_planner_onnx_split/: diffusion_planner.hpp
planner/autoware_diffusion_planner_onnx_split_cpp/launch/: diffusion_planner_onnx_split.launch.xml
planner/autoware_diffusion_planner_onnx_split_cpp/src/: diffusion_planner.cpp  diffusion_planner_node.cpp
scripts/onnx_split/: README.md  analyze_onnx_split.py  graphsurgeon_split.py
weights/v2.0/: MODEL_INFO.txt  SHA256SUMS  turn_indicator_calculator.onnx
